job-service/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service
  template:
    metadata:
      labels:
        app: job-service
    spec:
      containers:
        - name: job-service
          image: job-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
