job-service/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  type: NodePort
  selector:
    app: job-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
