job-service/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: demo.com
      http:
        paths:
          - path: /job-service
            pathType: Prefix
            backend:
              service:
                name: job-service
                port:
                  number: 8080
